doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Users\iva\Downloads\Greenfoot-windows-310\greenfoot\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-protected
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Users\iva\Downloads\Greenfoot-windows-310\greenfoot\lib\extensions\greenfoot.jar;C:\Users\iva\Downloads\Greenfoot-windows-310\greenfoot\lib\bluejcore.jar;C:\Users\iva\Downloads\Greenfoot-windows-310\greenfoot\lib\bluejeditor.jar;C:\Users\iva\Downloads\Greenfoot-windows-310\greenfoot\lib\bluejext.jar;C:\Users\iva\Downloads\Greenfoot-windows-310\greenfoot\lib\AppleJavaExtensions.jar;C:\Users\iva\Downloads\Greenfoot-windows-310\greenfoot\lib\junit-4.11.jar;C:\Users\iva\Downloads\Greenfoot-windows-310\greenfoot\lib\hamcrest-core-1.3.jar;C:\Users\iva\Downloads\Greenfoot-windows-310\greenfoot\lib\bluej.jar;C:\Users\iva\Downloads\Greenfoot-windows-310\greenfoot\lib\diffutils-1.2.1.jar;C:\Users\iva\Downloads\Greenfoot-windows-310\greenfoot\lib\commons-httpclient-3.1.jar;C:\Users\iva\Downloads\Greenfoot-windows-310\greenfoot\lib\commons-logging-api-1.1.2.jar;C:\Users\iva\Downloads\Greenfoot-windows-310\greenfoot\lib\commons-codec-1.3.jar;C:\Users\iva\Downloads\Greenfoot-windows-310\greenfoot\lib\jl1.0.1.jar;C:\Users\iva\Downloads\Greenfoot-windows-310\greenfoot\lib\opencsv-2.3.jar;C:\Users\iva\Downloads\Greenfoot-windows-310\greenfoot\lib\xom-1.2.9.jar;C:\Users\iva\Downloads\Greenfoot-windows-310\greenfoot\lib\lang-stride.jar;C:\Users\iva\Downloads\Greenfoot-windows-310\greenfoot\lib\guava-17.0.jar;C:\Users\iva\Downloads\Greenfoot-windows-310\greenfoot\lib\javassist-3.18.0.jar;C:\Users\iva\Downloads\Greenfoot-windows-310\greenfoot\lib\commons-vfs2-2.0.jar;C:\Users\iva\Downloads\Greenfoot-windows-310\greenfoot\lib\httpclient-4.1.1.jar;C:\Users\iva\Downloads\Greenfoot-windows-310\greenfoot\lib\httpcore-4.1.jar;C:\Users\iva\Downloads\Greenfoot-windows-310\greenfoot\lib\httpmime-4.1.1.jar;C:\Users\iva\Documents\IfaDah
-d
C:\Users\iva\Documents\IfaDah\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Users\iva\Downloads\Greenfoot-windows-310\greenfoot\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
C:\Users\iva\Documents\IfaDah\CorkBoard.java
<---- end of javadoc command ---->
Loading source file C:\Users\iva\Documents\IfaDah\CorkBoard.java...
C:\Users\iva\Documents\IfaDah\CorkBoard.java:44: error: illegal start of expression
public void }
^
C:\Users\iva\Documents\IfaDah\CorkBoard.java:44: error: illegal start of expression
public void }
       ^
C:\Users\iva\Documents\IfaDah\CorkBoard.java:44: error: ';' expected
public void }
           ^
C:\Users\iva\Documents\IfaDah\CorkBoard.java:44: error: reached end of file while parsing
public void }
             ^
C:\Users\iva\Documents\IfaDah\CorkBoard.java:45: error: reached end of file while parsing
5 errors
